--- a/index.html
+++ b/index.html
@@ -86,10 +86,8 @@
   <!-- ======= hero Section ======= -->
   <section id="hero">
 
-    <div class="hero-content" data-aos="fade-up">
-      <div class="slogan">
-        <h2 class="lang" key="bitewilik1">Наш девиз: «целостность & сохранность»</h2> 
-      </div>
+    <div class="hero-content slogan" data-aos="fade-up">
+      <h2 class="lang" key="bitewilik1">Наш девиз: <br> <span>«целостность & сохранность»</span></h2> 
       <!-- <img src="images/logotype.png" alt=""> -->
     </div>
 
@@ -156,7 +154,7 @@
             <div class="row">
               <div class="col-lg-9 text-center text-lg-start">
                 <h3 class="cta-text lang" key="section1h3">Обращаясь к ЧОП «Зехинли доганлар» </h3>
-                <p class="cta-title lang" key="section1p"> Вы сохраните свое имущество в целостности и сохранности!</p>
+                <p class="cta-title lang" key="section1p"> «Вы сохраните свое имущество в целостности и сохранности!»</p>
               </div>
             </div>
           </div>
@@ -226,7 +224,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/logotype.png" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_4">Сопровождение грузов и машина сопровождения</h2>
+                <h2 class="lang" key="kartocka_fron_h2_4">Сопровождение грузов. <br> Машина сопровождения</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka4">Данный вид охранной деятельности предполагает обеспечение транспортом, охраной и сопровождение Заказчика в течение 24 часов в сутки. По требованию Заказчика наша компания имеет возможность предоставлять водителей и охранников со знанием иностранных языков.</p>
@@ -280,22 +278,22 @@
 
       <div class="process container" data-aos="fade-up">
         <div class="process_step">
-          <div class="process_no cyzyk">1</div>
+          <div class="process_no">1</div>
           <div class="process_item lang">Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
           <div class="process_icon"><img src="images/icons/contract.png" alt=""></div>
         </div>
         <div class="process_step">
-          <div class="process_no cyzyk">2</div>
+          <div class="process_no">2</div>
           <div class="process_item lang">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
           <div class="process_icon"><img src="images/icons/guard.png" alt=""></div>
         </div>
         <div class="process_step">
-          <div class="process_no cyzyk">3</div>
+          <div class="process_no">3</div>
           <div class="process_item lang">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта</div>
           <div class="process_icon"><img src="images/icons/analyze.png" alt=""></div>
         </div>
         <div class="process_step">
-          <div class="process_no cyzyk">4</div>
+          <div class="process_no">4</div>
           <div class="process_item lang">После согласования с Заказчиком происходит монтаж необходимого оборудования</div>
           <div class="process_icon"><img src="images/icons/safe.png" alt=""></div>
         </div>
