uytgedilen kop zat yok

--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
           </div>
         </div>
         <section id="call-to-action">
+          <!-- <img src="assets/img/hero-carousel/1.jpg" alt=""> -->
           <div class="container " data-aos="zoom-out">
+            <div class="col-lg-9 text-center text-lg-start">
             <div class="row">
-              <div class="col-lg-9 text-center text-lg-start">
                 <h3 class="cta-text lang" key="section1h3">Обращаясь к ЧОП «Зехинли доганлар» </h3>
                 <p class="cta-title lang" key="section1p"> «Вы сохраните свое имущество в целостности и сохранности!»</p>
               </div>
@@ -264,7 +265,7 @@
       <div class="container" data-aos="zoom-out">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3 class="cta-title lang" key="section2h3">Сосредоточьтесь на важном для вас, а мы позаботимся о вашей безопасности!</h3>
+            <h3 class="cta-title lang" key="section2h3">Сосредоточьтесь на важном для вас, <br> а мы позаботимся о вашей безопасности!</h3>
           </div>
         </div>
       </div>
