--- a/index.html
+++ b/index.html
@@ -108,17 +108,15 @@
 
     <!-- ======= About Section ======= -->
     <section id="about">
-      <div class="container" data-aos="fade-up">
+      <div class="container section-header" data-aos="fade-up">
         <div class="row">
-          <div class="col-lg-6 about-img">
-            <img src="assets/img/about-img.jpg" alt="">
-          </div>
+
 
           <div class="col-lg-6 content">
             <h2 class="lang" key="about_short">О нас</h2>
             <h3 class="header lang" key="about1">
               </h3>
-              <h3 class="lang" key="about2">Частное охранное предприятие «Зехинли доганлар» основано в 22-го июня 2016 года и перерегистрировано 29-го  мая 2020 года как хозяйственное общество, чтобы приобрести дополнительные коды по ГКВЭД. Предприятие действует на основании Единого государственного реестра № 24594443 от 29-го мая 2020 года и Устава предприятия, выданного Министерством Экономики и Развития Туркменистана.</h3>
+              <h3 class="lang" key="about2">Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</h3>
 
             <ul>
               <li><i class="bi bi-check-circle lang"></i></li>
@@ -127,6 +125,10 @@
             <div class="call-to-action">
                 <a class="learnmore lang" key="learn_more" href="about.html">Узнать больше</a>
             </div>
+          </div>
+
+          <div class="col-lg-6 about-img">
+            <img src="assets/img/about-img.jpg" alt="">
           </div>
         </div>
 
