--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 
         <!-- ======= Call To Action Section 1 ======= -->
-        <!-- <div class="shape">
+        <div class="shape">
           <div class="shape-divider" style="height: 116px;">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 116" preserveAspectRatio="xMinYMin">
               <path class="custom-svg-fill-color-tertiary-darken" d="M0,24c2.86,0.42,7.41,1.1,13,2c6.13,0.98,10.67,1.77,12,2c11.67,2.01,42.24,7.05,68,11
@@ -151,7 +151,7 @@
                 c33.26-3.78,60.85-7.38,80-10c0-9.01,0-18.01,0-27.02c-644,0-1288,0-1932,0C-6.33,4.99-6.67,13.99-7,23z"></path>
             </svg>
           </div>
-        </div> -->
+        </div>
         <section id="call-to-action">
           <!-- <img src="assets/img/hero-carousel/1.jpg" alt=""> -->
             <div class="container" data-aos="zoom-out">
@@ -163,7 +163,7 @@
               </div>
             </div>
         </section><!-- End Call To Action Section -->
-        <!-- <div class="shape2">
+        <div class="shape2">
           <div class="shape-divider" style="height: 116px;">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 116" preserveAspectRatio="xMinYMin">
               <path class="custom-svg-fill-color-tertiary-darken" d="M0,24c2.86,0.42,7.41,1.1,13,2c6.13,0.98,10.67,1.77,12,2c11.67,2.01,42.24,7.05,68,11
@@ -176,7 +176,7 @@
                 c33.26-3.78,60.85-7.38,80-10c0-9.01,0-18.01,0-27.02c-644,0-1288,0-1932,0C-6.33,4.99-6.67,13.99-7,23z"></path>
             </svg>
           </div>
-        </div> -->
+        </div>
         
 
     <!-- ======= Services Section ======= -->
