--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <li><i class="bi bi-check-circle lang"></i></li>
             </ul> -->
             <br>
-            <div class="call-to-action">
+            <div class="container">
                 <a class="learnmore lang" key="learn_more" href="about.html">Узнать больше</a>
             </div>
           </div>
