--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
       </div>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto lang" href="#hero" key="home">Home</a></li>
+          <li><a class="nav-link scrollto lang" href="index.html" key="home">Home</a></li>
           <li><a class="nav-link scrollto active lang" href="about.html" key="about">About Us</a></li>
           <li><a class="nav-link scrollto lang" href="services.html" key="services">Services</a></li>
           <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Gallery</a></li>
@@ -120,6 +120,48 @@
 
 
 
+
+
+
+
+    <!-- Start of How We work section -->
+    <section class="container">
+
+      <div class="section-header">
+        <h2 class="whywe lang" key="why_we"><br>КАК МЫ РАБОТАЕМ</h2>
+      </div>
+
+      <div class="process container" data-aos="fade-up">
+        <div class="process_step">
+          <div class="process_no">1</div>
+          <div class="process_item lang">Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
+          <div class="process_icon"><img src="images/icons/contract.png" alt=""></div>
+        </div>
+        <div class="process_step">
+          <div class="process_no">2</div>
+          <div class="process_item lang">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
+          <div class="process_icon"><img src="images/icons/guard.png" alt=""></div>
+        </div>
+        <div class="process_step">
+          <div class="process_no">3</div>
+          <div class="process_item lang">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта</div>
+          <div class="process_icon"><img src="images/icons/analyze.png" alt=""></div>
+        </div>
+        <div class="process_step">
+          <div class="process_no">4</div>
+          <div class="process_item lang">После согласования с Заказчиком происходит монтаж необходимого оборудования</div>
+          <div class="process_icon"><img src="images/icons/safe.png" alt=""></div>
+        </div>
+        <div class="process_step">
+          <div class="process_no">5</div>
+          <div class="process_item lang">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации</div>
+          <div class="process_icon"><img src="images/icons/safe2.png" alt=""></div>
+        </div>
+
+      </div>
+
+    </section>
+    <!-- End of How We work section -->
 
     <!-- ======= Clients Section ======= -->
     <section id="clients">
