--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       </div>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active lang" href="#hero" key="home">Home</a></li>
-          <li><a class="nav-link scrollto lang" href="about.html" key="about">About Us</a></li>
-          <li><a class="nav-link scrollto lang" href="services.html" key="services">Services</a></li>
-          <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Gallery</a></li>
+          <li><a class="nav-link scrollto active lang" href="index.html" key="home">Home</a></li>
+          <li><a class="nav-link scrollto lang" href="about.html" key="about">О нас</a></li>
+          <li><a class="nav-link scrollto lang" href="services.html" key="services">Услуги</a></li>
+          <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Галерея</a></li>
           <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Contact</a></li>
           <li class="dropdown">
             <a href="#"><span key="active_lang" class="lang">EN</span><i class="bi bi-chevron-down langs"></i></a>
@@ -300,6 +300,7 @@
         </div>
 
 
+        <!-- WORK LIST SECTION -->
         <section id="work" class="container">
           <div class="section-header">
             <h2 class="lang" key="why_we"><br>Что Вы получаете, сотрудничая с нами?</h2>
@@ -322,32 +323,8 @@
               <li class="list_step">Спокойную жизнь и возможность сконцентрировать силы на своих целях, не беспокоясь о безопасности</li>
             </ul>
           </div>
-
-          
-
-
-
-
-
         </section>
-
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <!-- END OF WORK LIST SECTION -->
 
 
     <!-- ======= Contact Section ======= -->
