--- a/about.html
+++ b/about.html
@@ -62,11 +62,11 @@
       </div>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto lang" href="index.html" key="home">Home</a></li>
-          <li><a class="nav-link scrollto active lang" href="about.html" key="about">About Us</a></li>
-          <li><a class="nav-link scrollto lang" href="services.html" key="services">Services</a></li>
-          <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Gallery</a></li>
-          <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Contact</a></li>
+          <li><a class="nav-link scrollto lang" href="index.html" key="home">Главная</a></li>
+          <li><a class="nav-link scrollto active lang" href="about.html" key="about">О нас</a></li>
+          <li><a class="nav-link scrollto lang" href="services.html" key="services">Услуги</a></li>
+          <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Галерея</a></li>
+          <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Контакты</a></li>
           <li class="dropdown">
             <a href="#"><span key="active_lang" class="lang">EN</span><i class="bi bi-chevron-down langs"></i></a>
             <ul>
@@ -81,9 +81,7 @@
       </nav><!-- .navbar -->
 
     </div>
-  </header><!-- End Header -->
-
-  <!-- ======= hero Section ======= -->
+  </header><!-- End Header --> <!-- ======= hero Section ======= -->
  
 
   <main id="main">
