--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="hero-slider swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/1.jpg');"></div>
-        <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/2.jpg');"></div>
+        <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/2.webp');"></div>
         <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/3.jpg');"></div>
         <!-- <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/4.jpg');"></div> -->
         <!-- <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/5.jpg');"></div> -->
@@ -111,7 +111,7 @@
         <div class="row">
 
           <div class="col-lg-5 about-img">
-            <img src="assets/img/about-img.jpg" alt="">
+            <img src="assets/img/shevron-1.webp" alt="">
           </div>
           <div class="col-lg-7 content">
             <h2 class="lang" key="about_short">О нас</h2>
@@ -135,7 +135,7 @@
 
 
         <!-- ======= Call To Action Section 1 ======= -->
-        <div class="shape">
+        <div class="shape-up">
           <div class="shape-divider" style="height: 116px;">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 116" preserveAspectRatio="xMinYMin">
               <path class="custom-svg-fill-color-tertiary-darken" d="M0,24c2.86,0.42,7.41,1.1,13,2c6.13,0.98,10.67,1.77,12,2c11.67,2.01,42.24,7.05,68,11
@@ -160,7 +160,7 @@
               </div>
             </div>
         </section><!-- End Call To Action Section -->
-        <div class="shape2">
+        <div class="shape-down">
           <div class="shape-divider" style="height: 116px;">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 116" preserveAspectRatio="xMinYMin">
               <path class="custom-svg-fill-color-tertiary-darken" d="M0,24c2.86,0.42,7.41,1.1,13,2c6.13,0.98,10.67,1.77,12,2c11.67,2.01,42.24,7.05,68,11
@@ -268,7 +268,7 @@
 
 
     <!-- ======= Call To Action Section ======= -->
-    <div class="shape">
+    <div class="shape-up">
       <div class="shape-divider" style="height: 116px;">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 116" preserveAspectRatio="xMinYMin">
           <path class="custom-svg-fill-color-tertiary-darken" d="M0,24c2.86,0.42,7.41,1.1,13,2c6.13,0.98,10.67,1.77,12,2c11.67,2.01,42.24,7.05,68,11
@@ -291,7 +291,7 @@
         
       </div>
     </section><!-- End Call To Action Section -->
-        <div class="shape2">
+        <div class="shape-down">
           <div class="shape-divider" style="height: 116px;">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1920 116" preserveAspectRatio="xMinYMin">
               <path class="custom-svg-fill-color-tertiary-darken" d="M0,24c2.86,0.42,7.41,1.1,13,2c6.13,0.98,10.67,1.77,12,2c11.67,2.01,42.24,7.05,68,11
