--- a/about.html
+++ b/about.html
@@ -189,6 +189,15 @@
       </div>
     </section><!-- End Clients Section -->
 
+    <section id="shapes">
+      <div class="container">
+        <div class="shapes">
+          <div class="shape_text">
+            Договор
+          </div>
+        </div>
+      </div>
+    </section>
 
     
   <!-- Vendor JS Files -->
