grid ish boldy mana

--- a/playground.html
+++ b/playground.html
@@ -23,11 +23,11 @@
 <body>
     <section id="work-chart" class="container2">
       <div class="grid-5x1">
-        <div class="shapes"><div class="dogovor">1</div></div>
-        <div class="shapes"><div class="dogovor">2</div></div>
-        <div class="shapes"><div class="dogovor">3</div></div>
-        <div class="shapes"><div class="dogovor">4</div></div>
-        <div class="shapes"><div class="dogovor">5</div></div>
+        <div class="shapes"><div class="dogovor">dogovorennost1</div></div>
+        <div class="shapes"><div class="dogovor">dogovorennost2</div></div>
+        <div class="shapes"><div class="dogovor">dogovorennost3</div></div>
+        <div class="shapes"><div class="dogovor">dogovorennost4</div></div>
+        <div class="shapes"><div class="dogovor">dogovorennost5</div></div>
       </div>
 
       
