--- a/playground.html
+++ b/playground.html
@@ -53,7 +53,7 @@
       </div>
       <div class="guty">
         <div class="ikonki"><img class="surat" src="images/icons/guard (2).png" alt=""></div>
-        <div class="shapes">Защита</div>
+        <div class="shapes">isdafjsdahfrhd</div>
         <div class="work-chart-text">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации
         </div>
       </div>
