--- a/about.html
+++ b/about.html
@@ -224,9 +224,11 @@
                           <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь </P>
                           <ol class="list-sogap">
                             <li>Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат для обеспечения восстановительного лечения.</li>
+                            <div class="pismo"><a target="_blank" href="images/minnetdarlyk.jpg"><img src="images/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
                             <li>Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ) в приобретении спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участия люди с синдромом Дауна и инвалиды по интеллекту.</li>
                             <li>Обществу глухонемых в г. Балканабат для улучшения условий содержания детей инвалидов.</li>
                             <li>Предпринимателю Х. Годанову по созданию историко-краеведческого музея в г. Етрек Етрекского этрапа Балканского велаята.</li>
+                            <div class="pismo"><a target="_blank" href="images/telekeçi godanow.jpg"><img src="images/telekeçi godanow.jpg" alt="Minnetdarlyk haty"></a></div>
                           </ol>
                           <p>Хозяйственное общество «Зехинли доганлар» планирует продолжить благотворительную деятельность, так как лучший способ сохранить память о добрых делах-повторять их.</p>
                     </div>
@@ -255,6 +257,8 @@
 
 
     
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
