--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         <div class="row">
 
           <div class="col-lg-5 about-img">
-            <img src="assets/img/shevron-1.webp" alt="">
+            <img src="images/about-img-500px.png" alt="">
+            <!-- <div class="sunshine"></div> -->
           </div>
           <div class="col-lg-7 content">
             <h2 class="lang" key="about_short">О нас</h2>
