--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       <div class="container section-header" data-aos="fade-up">
         <div class="row">
 
-          <div class="col-lg-5 about-img">
-            <img src="images/about-img-500px.png" alt="">
+          <div class="col-lg-5 about-img sunshine">
+            <!-- <img src="images/logo with sunshine.jpg" alt=""> -->
             <!-- <div class="sunshine"></div> -->
           </div>
           <div class="col-lg-7 content">
